0.8.6   (future)

	o	new sugar functions (dpq)(unif|norm|gamma|chisq|lnorm|weibull|logis|pois|binom|t|beta)

	o	new vignette Rcpp-quickref : quick reference guide of Rcpp API

	o	various patches to comply with solaris/suncc stricter standards

0.8.5   2010-07-25

    o   speed improvements. Vector::names, RObject::slot have been improved
        to take advantage of R API functions instead of callbacks to R

    o   Some small updates to the Rd-based documentation which now points to 
        content in the vignettes.  Also a small formatting change to suppress
	a warning from the development version of R.

    o   Minor changes to Date() code which may reenable SunStudio builds

0.8.4   2010-07-09

    o   new sugar vector functions: rep, rep_len, rep_each, rev, head, tail,
	diag
	
    o	sugar has been extended to matrices: The Matrix class now extends the 
    	Matrix_Base template that implements CRTP. Currently sugar functions 
    	for matrices are: outer, col, row, lower_tri, upper_tri, diag

    o   The unit tests have been reorganised into fewer files with one call
 	each to cxxfunction() (covering multiple tests) resulting in a
 	significant speedup

    o	The Date class now uses the same mktime() replacement that R uses
        (based on original code from the timezone library by Arthur Olson)
	permitting wide date ranges on all operating systems

    o   The FastLM example has been updated, a new benchmark based on the
        historical Longley data set has been added

    o   RcppStringVector now uses std::vector<std::string> internally
    
    o	setting the .Data slot of S4 objects did not work properly

0.8.3   2010-06-27

    o	This release adds Rcpp sugar which brings (a subset of) the R syntax
        into C++. This supports : 
         - binary operators : <,>,<=,>=,==,!= between R vectors
         - arithmetic operators: +,-,*,/ between compatible R vectors
         - several functions that are similar to the R function of the same name: